tests/ui/pattern/for-loop-bad-item.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-bad-item.rs:13:14
   |
LL |     for Some(Qux(_)) | None in [Some(""), None] {
   |              ^^^^^^            ---------------- this is an iterator with items of type `Option<&str>`
   |              |
   |              expected `str`, found `Qux`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
